# sesh

./: AGENTS.md  Cargo.toml  PLAN.md  README.md  SPEC.md  STYLE.md  TODO.md
crates/sesh/: Cargo.toml
crates/sesh-integration-tests/: Cargo.toml  README.md
crates/sesh-integration-tests/scripts/: tmcap
crates/sesh-integration-tests/src/: env.rs  lib.rs  parser.rs  runner.rs  sesh.rs  svg.rs  tmux.rs
crates/sesh-integration-tests/src/snapshots/: sesh_integration_tests__parser__tests__captures_bad_filters_as_error.snap  sesh_integration_tests__parser__tests__captures_bad_shlex_as_error.snap  sesh_integration_tests__parser__tests__captures_command_without_arguments_as_error.snap  sesh_integration_tests__parser__tests__captures_invalid_key_as_error.snap  sesh_integration_tests__parser__tests__captures_invalid_modified_text_keys_as_error.snap  sesh_integration_tests__parser__tests__captures_invalid_snap_count_as_error.snap  sesh_integration_tests__parser__tests__captures_invalid_snap_duration_as_error.snap  sesh_integration_tests__parser__tests__captures_invalid_snap_regex_as_error.snap  sesh_integration_tests__parser__tests__captures_unknown_directive_as_error.snap  sesh_integration_tests__parser__tests__captures_unterminated_keys_string_as_error.snap  sesh_integration_tests__parser__tests__leaves_unindented_colon_lines_as_text.snap  sesh_integration_tests__parser__tests__parses_copy_directive.snap  sesh_integration_tests__parser__tests__parses_empty_script.snap  sesh_integration_tests__parser__tests__parses_keys_with_escaped_backslash_followed_by_escaped_quote.snap  sesh_integration_tests__parser__tests__parses_keys_with_escaped_backslash_followed_by_quote.snap  sesh_integration_tests__parser__tests__parses_keys_with_escaped_backslash_text.snap  sesh_integration_tests__parser__tests__parses_keys_with_escaped_quote_text.snap  sesh_integration_tests__parser__tests__parses_keys_with_single_modifier.snap  sesh_integration_tests__parser__tests__parses_keys_with_stacked_modifiers.snap  sesh_integration_tests__parser__tests__parses_mixed_text_and_directives.snap  sesh_integration_tests__parser__tests__parses_snap_with_color_flag.snap  sesh_integration_tests__parser__tests__parses_snap_with_count_flag.snap  sesh_integration_tests__parser__tests__parses_snap_with_duration_flag.snap  sesh_integration_tests__parser__tests__parses_snap_with_grapheme_replacement.snap  sesh_integration_tests__parser__tests__parses_snap_with_multiple_capture_groups.snap  sesh_integration_tests__parser__tests__parses_snap_with_multiple_filters.snap  sesh_integration_tests__parser__tests__parses_write_directive.snap  sesh_integration_tests__parser__tests__rejects_color_flag_on_settle.snap
crates/sesh-integration-tests/tests/: test.rs
crates/sesh-integration-tests/tests/cases/: no_repo.md  repo_log_failure.md  repo_log_success.md
crates/sesh-integration-tests/tests/cases/runner/: bins.md  bins.md.snap  keys.md  keys.md.snap  pane.md  pane.md.snap  parsing.md  parsing.md.snap  sh-tmux-env.md  sh-tmux-env.md.snap  sh.md  sh.md.snap  shell.md  shell.md.snap  snap.md  snap.md.snap  text.md  text.md.snap  tmux.md  tmux.md.snap  write-copy.md  write-copy.md.snap
crates/sesh-integration-tests/tests/snapshots/: test__no_repo.md.snap  test__repo_log_failure.md.snap  test__repo_log_success.md.snap  test__runner__bins.md.snap  test__runner__keys.md.snap  test__runner__pane.md.snap  test__runner__parsing.md.snap  test__runner__sh.md.snap  test__runner__shell.md.snap  test__runner__snap.md.snap  test__runner__text.md.snap  test__runner__tmux.md.snap  test__runner__write-copy.md.snap
crates/sesh/src/: app.rs  cache.rs  config.rs  jj.rs  lib.rs  main.rs  model.rs  path.rs  picker.rs  session.rs  skim.rs  terminal.rs  tmux.rs  ui.rs
crates/sesh/src/app/: block.rs  header.rs  highlight.rs  layout.rs  list.rs  loading.rs  mod.rs  model.rs  onto.rs  onto_picker.rs  preview.rs  prompt.rs  scrollbar.rs  sessions.rs  span.rs
crates/sesh/src/app/component/: list.rs  loader.rs  loading.rs  mod.rs  prompt.rs  row.rs  scroll.rs  scrollbar.rs  spinner.rs
crates/sesh/src/app/onto/: mod.rs  picker.rs
crates/sesh/src/app/sessions/: mod.rs  preview.rs  session.rs
crates/sesh/src/cmd/: jj.rs  mod.rs  tmux.rs
crates/sesh/src/model/: mod.rs  picker.rs  prefetch.rs  session.rs
crates/sesh/src/widget/: loading.rs  mod.rs
crates/sesh/tests/: test.rs
crates/sesh/tests/cases/: help.md  help.md.snap
crates/sesh/tests/cases/ui/: adaptive-layout.md  adaptive-layout.md.snap  basic-session.md  basic-session.md.snap  bell-alert.md  bell-alert.md.snap  close-session.md  close-session.md.snap  current-repo-header.md  current-repo-header.md.snap  delete-default-workspace.md  delete-default-workspace.md.snap  delete-repo-session.md  delete-repo-session.md.snap  delete-session.md  delete-session.md.snap  delete-workspace.md  delete-workspace.md.snap  flag-session-target-collision.md  flag-session-target-collision.md.snap  flag-session.md  flag-session.md.snap  initial-query.md  initial-query.md.snap  list-extreme-navigation.md  list-extreme-navigation.md.snap  list-match-scroll.md  list-match-scroll.md.snap  list-navigation-aliases.md  new-session-create.md  (+50 more)
crates/sesh/tests/fixtures/: jjconfig.toml
crates/sesh/tests/snapshots/: test__help.md.snap  test__ui__basic-session.md.snap  test__ui__current-repo-header.md.snap  test__ui__preview-scroll-threshold.md.snap  test__ui__preview-scroll.md.snap  test__ui__repo-attached-session.md.snap  test__ui__repo-context-shortcut.md.snap
(+15 files in other folders)
