[package]
name = "sesh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
futures = "0.3.31"
glob = "0.3"
once_cell = "1.20"
shlex = "1.3"
skim = { version = "1.7", default-features = false }
tokio = { version = "1.49", features = ["rt-multi-thread", "time", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
which = "8.0.0"

[dev-dependencies]
insta = { version = "1.43", features = ["filters"] }
