[workspace]
members = ["crates/sesh", "crates/sesh-integration-tests"]
resolver = "2"

[workspace.dependencies]
# Workspace members
sesh = { path = "crates/sesh" }
sesh-integration-tests = { path = "crates/sesh-integration-tests" }

# External dependencies
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
datatest-stable = "0.3"
futures = "0.3.31"
glob = "0.3"
insta = { version = "1.43", features = ["filters"] }
once_cell = "1.20"
nonempty = "0.12"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
shlex = "1.3"
skim = { version = "1.7", default-features = false }
tempfile = "3.23"
telemetry-subscribers = { version = "0.4.1", default-features = false }
textwrap = "0.16"
tokio = { version = "1.49", features = ["fs", "process", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.9"
tracing = "0.1"
vt100 = "0.16"
which = "8.0.0"
winnow = "0.7"
