[workspace]
members = ["crates/sesh", "crates/sesh-integration-tests"]
resolver = "2"

[workspace.dependencies]
# Workspace members
sesh = { path = "crates/sesh" }
sesh-integration-tests = { path = "crates/sesh-integration-tests" }

# External dependencies
ansi-to-tui = "8.0.1"
anstyle = "1.0"
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
crossterm = "0.29"
datatest-stable = "0.3"
futures = "0.3.31"
glob = "0.3"
humantime = "2.3"
insta = { version = "1.43", features = ["filters"] }
nonempty = "0.12"
nucleo = "0.5.0"
once_cell = "1.20"
ratatui = "0.30"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
shlex = "1.3"
tempfile = "3.23"
telemetry-subscribers = { version = "0.4.1", default-features = false }
textwrap = { version = "0.16", features = ["terminal_size"] }
thiserror = "2.0.18"
tokio = { version = "1.49", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.9"
tracing = "0.1"
unicode-width = "0.2.2"
vt100 = "0.16"
which = "8.0.0"
winnow = "0.7"
