[package]
name = "sesh-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
futures.workspace = true
nonempty.workspace = true
regex.workspace = true
shlex.workspace = true
skim.workspace = true
tempfile.workspace = true
textwrap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
which.workspace = true
winnow.workspace = true

[dev-dependencies]
datatest-stable.workspace = true
insta.workspace = true
telemetry-subscribers.workspace = true

[[test]]
name = "test"
path = "tests/test.rs"
harness = false
