[package]
name = "sesh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
dashmap.workspace = true
futures.workspace = true
glob.workspace = true
interprocess.workspace = true
once_cell.workspace = true
ron.workspace = true
shlex.workspace = true
skim.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
vt100.workspace = true
which.workspace = true

[dev-dependencies]
anyhow.workspace = true
datatest-stable.workspace = true
insta.workspace = true
sesh-integration-tests.workspace = true
tempfile.workspace = true
telemetry-subscribers.workspace = true
tokio.workspace = true

[[test]]
name = "test"
path = "tests/test.rs"
harness = false
