[package]
name = "sesh"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sesh"
path = "src/bin/sesh/main.rs"

[dependencies]
ansi-to-tui.workspace = true
anstyle.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
crossterm.workspace = true
dashmap.workspace = true
futures.workspace = true
glob.workspace = true
nucleo.workspace = true
once_cell.workspace = true
ratatui.workspace = true
serde.workspace = true
textwrap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
unicode-width.workspace = true
which.workspace = true

[dev-dependencies]
anyhow.workspace = true
datatest-stable.workspace = true
insta.workspace = true
sesh-integration-tests.workspace = true
tempfile.workspace = true
telemetry-subscribers.workspace = true
tokio.workspace = true

[[test]]
name = "test"
path = "tests/test.rs"
harness = false
